# SpectralLoop

./: .qmlls.ini  CMakeLists.txt  Main.qml  main.cpp
qml/: Main.qml
src/: main.cpp
src/Interface/: BackendInterface.cpp  BackendInterface.h
src/Model/: SpectrogramConverter.cpp  SpectrogramConverter.h  SpectrogramObject.cpp  SpectrogramObject.h  SpectrogramPlayer.cpp  SpectrogramPlayer.h
